# termotelmre

./: .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/sebyone/termotelmre/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  daas_jni.cpp
app/src/main/include/: daas.hpp  daas_types.hpp
app/src/main/java/com/sebyone/daas/: DaasManager.kt
app/src/main/java/com/sebyone/termotelmre/: DeviceStatusDecoder.kt  DeviceStatusReport.kt  MainActivity.kt  MainViewModel.kt
app/src/main/java/com/sebyone/termotelmre/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/simpleble/android/: Peripheral.kt  SimpleBleServer.kt
app/src/main/java/org/simpleble/android/bridge/: BluetoothGattCallback.java  ScanCallback.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/sebyone/termotelmre/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
